Fixed too big size of an item page

--- a/product/static/item_page.css
+++ b/product/static/item_page.css
@@ -9,6 +9,8 @@ h1 {
 img {
     position: sticky;
     top: 0;
+    width: 100%;
+    height: auto;
 }
 
 button {
